--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section id="hero">
     <div class="container">
         <h2>Hi, I'm James 👋</h2>
-        <p>A passionate web developer focused on building modern and responsive websites using HTML, CSS, and JavaScript.</p>
+        <p>I'm a passionate software developer dedicated to crafting modern, responsive, and user-friendly digital experiences. With a strong eye for design and attention to detail, I aim to transform ideas into seamless, impactful solutions that work beautifully across all devices.</p>
     </div>
 </section>
 
@@ -35,7 +35,11 @@
 <section id="about">
     <div class="container">
         <h2>About Me</h2>
-        <p>I'm a self-taught web developer who enjoys turning ideas into reality through code. I’m always learning, building, and improving my skills every day.</p>
+        <p>
+            Hello, I’m James, a 20-year-old who is passionate about software programming and possesses a solid background in web and software development. <br><br> I have expertise in HTML, Python, and JavaScript, and I enjoy merging my technical capabilities with my eagerness to create innovative, user-focused solutions.  Whether it’s constructing interactive websites, devising effective algorithms, or addressing real-world challenges through coding, I find joy in transforming concepts into functional and aesthetically pleasing applications. <br><br>
+            I have a strong interest in emerging technologies and keep myself updated by exploring new tools and frameworks. My ambition is to contribute to projects that have a significant impact, be it by optimizing processes, improving user experiences, or expanding the limits of what technology can accomplish. <br><br>
+            Collaboration and creativity are fundamental to my approach, and I constantly look forward to collaborating with individuals who share a passion for innovation. Let’s create something extraordinary together!
+        </p>
     </div>
 </section>
 
@@ -63,9 +67,10 @@
         <ul class="skills-list">
             <li>HTML5</li>
             <li>CSS3</li>
+            <li>React</li>
+            <li>Python</li>
             <li>JavaScript</li>
             <li>Git & GitHub</li>
-            <li>Responsive Design</li>
         </ul>
     </div>
 </section>
